--- a/package.json
+++ b/package.json
@@ -17,21 +17,31 @@
     "url": "https://github.com/daniknewgarden/wilkidzz/issues"
   },
   "homepage": "https://github.com/daniknewgarden/wilkidzz#readme",
+  "browserslist": [
+    "> 1%",
+    "last 3 version"
+  ],
   "devDependencies": {
+    "autoprefixer": "^9.8.6",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^4.2.0",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.10",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "rfs": "^9.0.3"
+  }
 }
