--- a/package.json
+++ b/package.json
@@ -35,13 +35,16 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
+    "rfs": "^9.0.3",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
+    "svg-inline-loader": "^0.8.2",
+    "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "rfs": "^9.0.3"
+    "resolve-url-loader": "^3.1.1"
   }
 }
